ipc/ipdl/test/ipdl/ok/PExtendedAttrMultipleAttributes.ipdl
[NestedUpTo=inside_sync,RefCounted] async protocol PExtendedAttrMultipleAttributes {
parent:
    async Msg();
};
