ipc/ipdl/test/ipdl/error/PMissingProc.ipdl
//error: Toplevel protocols must specify [ChildProc]

protocol PMissingProc {
parent:
    async Msg();
};
